Basic code refactored and beautified
- Added comments in .env.example file
- Formatted code in util.js file
- Formatted code in auth.middleware.js and removed unwanted console log

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,15 @@
+# Create a .env file in /backend
+
+# JWT secret - a bunch of random characters to be used for better security
 JWT_SECRET=
+
+# Node environment - development or production
 NODE_ENV=
-CLOUDINARY_URL=
+
+# Cloudinary API credentials
 CLOUDINARY_API_SECRET=
 CLOUDINARY_API_KEY=
 CLOUDINARY_CLOUD_NAME=
 
-
-MONGO_URI= 
+# MongoDB connection string
+MONGO_URI=
