Implemented auto ping for backend

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,3 +13,6 @@ CLOUDINARY_CLOUD_NAME=
 
 # MongoDB connection string
 MONGO_URI=
+
+# Server URL (change that in production) -> https://devconnect-1-26zi.onrender.com
+SERVER_URL=http://localhost:3000
