--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
